# mkdocs-test

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  versions.json
0.0.4/: 404.html  index.html  sitemap.xml
0.0.4/how-to-use/: index.html
0.4.0/: index.html
0.4.0/how-to-use/: index.html
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/how-to-use/: index.html
0.5.0/search/: search_index.json
0.6.0/: 404.html  index.html  sitemap.xml
0.6.0/how-to-use/: index.html
0.6.0/search/: search_index.json
0.é.0/: 404.html
docs/: how-to-use.md  index.md
how-to-use/: index.html
search/: search_index.json
