[tool.poetry]
name = "mkdocs-test"
version = "0.1.0"
description = ""
authors = ["Jean-Michel Grandvalet <jean-michel.grandvalet@exfo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.0"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-material = "^9.5.31"
mike = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
